--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -144,7 +144,11 @@
                 <li class="onhover-div mobile-cart">
                   <div><img src="/assets/images/icon/cart.png" class="img-fluid blur-up lazyload" alt=""> <i
                       class="ti-shopping-cart"></i></div>
-                  <span class="cart_qty_cls">{{cartItems.length}}</span>
+                        {{#ifEquals cartItems.length 0}}
+                          <!-- Handle the case when cartItems.length is 0 -->
+                        {{else}}
+                          <span class="cart_qty_cls">{{cartItems.length}}</span>
+                        {{/ifEquals}}
                   <ul class="show-div shopping-cart">
                     {{#each cartItems}}
                     <li>
@@ -346,8 +350,7 @@
         <div class="row">
           <div class="col-xl-6 col-md-6 col-sm-12">
             <div class="footer-end">
-              <p><i class="fa fa-copyright" aria-hidden="true"></i> 2023-24 themeforest powered by
-                pixelstrap</p>
+              <p><i class="fa fa-copyright" aria-hidden="true"></i> 2023-24 @ Stylio.</p>
             </div>
           </div>
           <div class="col-xl-6 col-md-6 col-sm-12">
