--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -32,6 +32,8 @@
   <!-- Bootstrap css -->
   <link rel="stylesheet" type="text/css" href="/assets/css/vendors/bootstrap.css">
 
+
+
   <!-- Theme css -->
   <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
 
@@ -62,7 +64,7 @@
               <li class="onhover-dropdown mobile-account"><i class="fa fa-user" aria-hidden="true"></i>
                 Welcome {{currentUser.firstName}}
                 <ul class="onhover-show-div">
-                  <li><a href="/auth/profile">Profile</a></li>
+                  <li><a href="/auth/profile">profile</a></li>
                   <li>
                     <form action="auth/logout" method="post">
                       <a href="/auth/logout">Logout</a>
